# DjangoProject_hw

./: .env.sample  .gitignore  README.md  groups_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_view_counter.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form_create.html  post_form_update.html  posts_list.html
blog/templates/blog/email/: congratulation.txt
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category_fixture.json  product_fixture.json  products_fixture.json
catalog/management/commands/: add_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py
catalog/templates/catalog/: add_product.html  base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_form_create.html  product_form_update.html  product_list_by_category.html
catalog/templates/catalog/includes/: header.html  inc_category.html
catalog/templatetags/: my_tags.py  top_category.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  register.html  user_profile_update.html
